# tiago_resources_management

tiago_head_manager/: CMakeLists.txt  package.xml
tiago_head_manager/include/tiago_head_manager/: ArtificialLife.h  tiago_head_manager.h
tiago_head_manager/src/: ArtificialLife.cpp  main.cpp  main_synchronised.cpp  tiago_head_manager.cpp
tiago_head_manager/test/: main.test  test.cpp
tiago_head_manager_msgs/: CMakeLists.txt  package.xml
tiago_head_manager_msgs/msg/: PitchYaw.msg  Point.msg  PrioritizedPitch.msg  PrioritizedTrajectory.msg  PrioritizedYaw.msg  StateMachine.msg  StateMachineStatePitchYaw.msg  StateMachineStatePoint.msg  StateMachineStatePrioritizedPitch.msg  StateMachineStatePrioritizedTrajectory.msg  StateMachineStatePrioritizedYaw.msg
tiago_head_manager_msgs/srv/: StateMachineExtract.srv  StateMachineRegister.srv
